# data-science-course

./: .gitignore  README.md  pyproject.toml
freeCodeCamp-course/aggregations/: group-by-agg-func.ipynb
freeCodeCamp-course/data-extraction/: data-extraction-intro.ipynb
freeCodeCamp-course/filtering-data/: filtering-data.ipynb
freeCodeCamp-course/machine-learning/: machine-learning.ipynb
freeCodeCamp-course/merging-concat/: merging-concat-operations.ipynb
freeCodeCamp-course/pandas-intro/: basic-func-methods.ipynb  column-selection.ipynb  data-frame-creation.ipynb  operations.ipynb
freeCodeCamp-course/pandas-intro/exercise/: pandas-intro-ex.ipynb
freeCodeCamp-course/pivot-table/: gdp.csv  pivot-tables.ipynb
freeCodeCamp-course/project-1/: web-scraping-with-pandas-demo.ipynb
freeCodeCamp-course/project-2/: data-vis-project.ipynb  interactive-vis.ipynb
freeCodeCamp-course/project-3/: data-cleaning.ipynb
freeCodeCamp-course/project-4/: sklearn-tutorial.ipynb
freeCodeCamp-course/regEx/: regEx.ipynb
matplotlib/: main.ipynb
numpy/: aggregate-functions.py  arithmetic.py  arrays.py  broadcasting.py  filtering.py  multidimen-arrs.py  random-numbers.py
numpy/quizz/: 100_Numpy_exercises.ipynb
pandas/tutorial/: data_cleaning_examples.ipynb  main.ipynb
pandas/tutorial/data/: employees_clean.csv  employees_dirty.csv
scikit-learn-course/desicion-trees-random-forest/: decision-tree-forest.ipynb
scikit-learn-course/linear-regression/: linear-regression-scikit-learn.ipynb
scikit-learn-course/logistic-regression/: logistic-regression-lesson.ipynb
(+13 files in other folders)
