[project]
name = "data-science"
version = "0.1.0"
description = "DS Course"
requires-python = ">=3.13"
dependencies = [
    "cufflinks>=0.17.3",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.7",
    "mdutils>=1.8.0",
    "nbformat>=5.10.4",
    "nltk>=3.9.2",
    "notebook>=7.4.7",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pyarrow>=21.0.0",
    "pyjanitor>=0.31.0",
    "wordcloud>=1.9.4",
]
